Use onepage.lilola@gmail.com. Fix missing layout when the number of links too long in Add Utilities from Library dialog

--- a/src/app/components/css/styles_desktop.css
+++ b/src/app/components/css/styles_desktop.css
@@ -262,14 +262,19 @@ li.menuItemPopup, .menuItemPopup a {
         display: inline-block;
         position: fixed;
         left: 20%;
-        top: 20%;
+        top: 13%;
         z-index: 999;
         padding: 0;
         border-radius: 3px;
         border: 3px solid #63b7d3;
         background-color: white;
-        display: flex;
+        
         flex-direction: column;
+    }
+
+    .bigDialog {
+        height: 800px;
+        overflow: auto;
     }
 
     .dialogTitle {
