--- a/src/app/components/css/styles_mobile.css
+++ b/src/app/components/css/styles_mobile.css
@@ -330,6 +330,10 @@ ul.utilities {
         display: flex;
         flex-direction: column;
     }
+    .bigDialog {
+        height: 500px;
+        overflow: auto;
+    }
 
     .dialogTitle {
         font-size: medium;
